<resources>
    <string name="app_name">Trivia</string>

    <!-- Strings related to main activity -->
    <string name="game_title">MPROG Trivia!</string>
    <string name="game_description">This is a temporary description placeholder. Something
        interesting is going to be displayed here…</string>
    <string name="new_game">New Game</string>
    <string name="highscore">Highscores</string>
    <string name="login">Login*</string>
    <string name="login_requirement">*Login to save your highscore</string>

    <!-- Strings related to game activity -->
    <string name="placeholder">placeholder</string>
    <string name="answer">Answer</string>
    <string name="submit">Submit Answer</string>

    <!-- Strings related to highscore activity -->

    <!-- Strings related to login activity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to activity titles -->
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_game">MPROG Trivia</string>
    <string name="title_activity_highscore">Highscore</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account_login">Already have an account? Login!</string>
    <string name="error_passwords_different">The passwords must be the same.</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="logout">Log Out</string>
    <string name="about">About</string>
    <string name="about_toast">About Placehodler</string>
    <string name="question_result">Correct/Wrong!</string>
    <string name="next_question">Next Question</string>
    <string name="result_correct">Correct!</string>
    <string name="result_wrong">Wrong!</string>
    <string name="get_question">Hold on, we are searching for a good question!</string>

</resources>
