<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/titleGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/pacifico"
                android:text="@string/game_title"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textSize="36sp"
                app:layout_constraintBottom_toTopOf="@+id/mainDiscription"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mainDiscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/game_description"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                app:layout_constraintEnd_toEndOf="@+id/mainTitle"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/mainTitle"
                app:layout_constraintTop_toBottomOf="@+id/mainTitle" />
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/buttonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleGroup">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/mainBtnNewGame"
                android:layout_width="168dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:onClick="newGameClicked"
                android:text="@string/new_game"
                android:textAppearance="@android:style/TextAppearance.Material.Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/mainBtnHighscore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="highscoreClicked"
                android:text="@string/highscore"
                app:layout_constraintEnd_toEndOf="@+id/mainBtnNewGame"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/mainBtnNewGame"
                app:layout_constraintTop_toBottomOf="@+id/mainBtnNewGame" />

        </android.support.constraint.ConstraintLayout>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>