<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".GameActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/resultView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="400dp">

                <TextView
                    android:id="@+id/gameResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/pacifico"
                    android:text="@string/question_result"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Headline"
                    android:textSize="36sp"
                    app:layout_constraintBottom_toTopOf="@+id/gameResultBtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/gameResultBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:onClick="nextClicked"
                    android:text="@string/next_question"
                    android:textAppearance="@android:style/TextAppearance.Material.Button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/gameResult"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/gameResult"
                    app:layout_constraintTop_toBottomOf="@+id/gameResult" />
            </android.support.constraint.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/questionView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/gameQuestion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Headline"
                    app:layout_constraintBottom_toTopOf="@+id/gameSubmit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/gameAnswer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:hint="@string/answer"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/gameSubmit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/gameSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:onClick="submitClicked"
                    android:text="@string/submit"
                    android:textAppearance="@android:style/TextAppearance.Material.Button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/gameAnswer"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/gameAnswer"
                    app:layout_constraintTop_toBottomOf="@+id/gameQuestion" />
            </android.support.constraint.ConstraintLayout>
        </FrameLayout>
    </android.support.constraint.ConstraintLayout>

</ScrollView>